--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sample-config
+  name: starfit-config
 data:
   SERVLET_CONTEXT_PATH: "/teng"
 # MYSQL DB
   DB_SERVER: mysql.mysql
-  DB_PORT: "31084"
+  DB_PORT: "3306"
   DB_USERNAME: root
   DB_PASSWORD: passw0rd
