--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -1,19 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: teng-exercise
+  name: starfit
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   tls:
   - secretName: tls-secret
   rules:
-  - http:
+  - host: teng.169.56.174.139.nip.io
+    http:
       paths:
       - path: /teng
         pathType: Prefix
         backend:
           service:
-            name: sample
+            name: starfit
+            port:
+              number: 8080
+      - path: /user
+        pathType: Prefix
+        backend:
+          service:
+            name: user
             port:
               number: 8080
