--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample
+  name: starfit
   labels:
-    app: sample
+    app: starfit
 spec:
   type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
   selector:
-    app: sample
+    app: starfit
