--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.5.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mvp</groupId>
-	<artifactId>mvp-sample-springboot</artifactId>
+	<groupId>com.starfit</groupId>
+	<artifactId>starfit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mvp-sample-springboot</name>
-	<description>Demo project for Spring Boot</description>
+	<name>starfit-exercise</name>
+	<description>Demo project for starfit</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
