--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -131,7 +131,7 @@ podTemplate(
 					sh "kubectl apply -n ${namespace} -f ${deployment}"
 					sh "sleep 5"
 					sh "kubectl apply -n ${namespace} -f ${service}"
-					sh "kubectl apply -n ${namespace} -f ${ingress}"
+//					sh "kubectl apply -n ${namespace} -f ${ingress}"
 				}
 			}
 
