--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -4,14 +4,14 @@ dockerRegistry=https://index.docker.io/v1/
 baseDir=.
 baseDeployDir=/deployment
 # docker info
-credential_registry=stfantasy3324
-image=stfantasy3324/starfitexercise
+credential_registry=hjsky1010
+image=hjsky1010/exercise
 # kubernetes
 config=deployment/config.yaml
-deployment=deployment/sample.yaml
+deployment=deployment/exercise.yaml
 namespace=teng
-service=deployment/service.yaml
-ingress=deployment/ingress.yaml
+service=deployment/exercise-service.yaml
+#ingress=deployment/ingress.yaml
 selector_key=app
 selector_val=sample
 
