--- a/deployment/exercise.yaml
+++ b/deployment/exercise.yaml
@@ -15,7 +15,7 @@ spec:
         app: exercise
     spec:
       containers:
-      - name: starfit
+      - name: exercise
         image: hjsky1010/exercise:dev
         imagePullPolicy: Always
         ports:
