--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -19,7 +19,7 @@ spec:
             name: exercise
             port:
               number: 8080
-      - path: /user
+      - path: /starfituser
         pathType: Prefix
         backend:
           service:
