--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -3,9 +3,13 @@ kind: ConfigMap
 metadata:
   name: exercise-config
 data:
-  SERVLET_CONTEXT_PATH: "/starfitexercise"
+  SERVLET_CONTEXT_PATH: /starfitexercise
+  SERVICE_PORT: "8080"
 # MYSQL DB
-  DB_SERVER: mysql.teng
+  DB_HOST: mysql
   DB_PORT: "3306"
+  DB_SERVER: mysql.teng
+  DB_NAME: point
   DB_USERNAME: root
   DB_PASSWORD: passw0rd
+  
