--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -4,10 +4,10 @@ metadata:
   name: exercise-config
 data:
   SERVLET_CONTEXT_PATH: /starfitexercise
-  SERVICE_PORT: "8080"
+  SERVICE_PORT: 8080
 # MYSQL DB
-  DB_HOST: mysql.teng
-  DB_PORT: "3306"
+  DB_HOST: mysql
+  DB_PORT: 3306
   DB_SERVER: mysql.teng
   DB_NAME: exercise
   DB_USERNAME: root
