--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -13,5 +13,5 @@ namespace=teng
 service=deployment/service.yaml
 #ingress=deployment/ingress.yaml
 selector_key=app
-selector_val=sample
+selector_val=exercise
 
