--- a/deployment/config.yaml
+++ b/deployment/config.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: exercise-config
 data:
-  SERVLET_CONTEXT_PATH: /starfitexercise
+  SERVLET_CONTEXT_PATH: "/starfitexercise"
   SERVICE_PORT: "8080"
 # MYSQL DB
   DB_HOST: mysql
